@@ -50,6 +50,8 @@ Changes between 1.X and 1.1.1
 - change: pytest doctest plugin is now enabled by default and has a
   new option --doctest-glob to set a pattern for file matches. 
 
+- change: remove internal py._* helper vars, only keep py._pydir 
+
 - robustify capturing to survive if custom pytest_runtest_setup 
   code failed and prevented the capturing setup code from running. 
 
